--- a/src/main/resources/travelGame.fxml
+++ b/src/main/resources/travelGame.fxml
@@ -1,20 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.MainController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane xmlns:fx="http://javafx.com/fxml"
+            fx:controller="org.example.MainController" stylesheets="@/org/example/style/app.css">
 
-    <ImageView fx:id="mapView"
-               AnchorPane.topAnchor="0"
-               AnchorPane.bottomAnchor="0"
-               AnchorPane.leftAnchor="0"
-               AnchorPane.rightAnchor="0"
-               preserveRatio="true"
-               fitWidth="1000"
-               fitHeight="700"/>
+    <center>
+        <StackPane>
+            <ImageView fx:id="mapView"
+                       preserveRatio="true"
+                       fitWidth="900"
+                       fitHeight="700"/>
+        </StackPane>
+    </center>
+
+    <right>
+        <VBox spacing="8" prefWidth="300" style="-fx-padding: 10;">
+            <Label text="Log" style="-fx-font-size: 16; -fx-font-weight: bold; -fx-text-fill: white;"/>
+            <ListView fx:id="logList"/>
+        </VBox>
+    </right>
+    <bottom>
+        <HBox alignment="CENTER"
+              spacing="20"
+              style="-fx-padding: 10;"
+              styleClass="bottom-bar">
+
+            <VBox alignment="CENTER_LEFT" spacing="5">
+                <Label text="Player 1"/>
+                <Label text="Player 2"/>
+            </VBox>
+
+            <Region HBox.hgrow="ALWAYS"/>
+
+            <Button text="ROLL"
+                    fx:id="rollButton"
+                    onAction="#onRoll"
+                    styleClass="roll-button"/>
+
+            <Region HBox.hgrow="ALWAYS"/>
 
 
-</AnchorPane>
+            <VBox alignment="CENTER_RIGHT" spacing="5">
+                <Label text="Player 3"/>
+                <Label text="Player 4"/>
+            </VBox>
+
+        </HBox>
+    </bottom>
+
+
+</BorderPane>
