--- a/src/main/resources/travelGame.fxml
+++ b/src/main/resources/travelGame.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.MainController" stylesheets="@/org/example/style/app.css">
+            fx:controller="org.example.TravelGameController" stylesheets="@/org/example/style/app.css">
 
     <center>
         <StackPane>
