--- a/src/main/resources/travelGame.fxml
+++ b/src/main/resources/travelGame.fxml
@@ -30,22 +30,28 @@
 
             <VBox alignment="CENTER_LEFT" spacing="5">
                 <Label text="Player 1"/>
+                <Label text="Points:0"/>
                 <Label text="Player 2"/>
+                <Label text="Points:0"/>
             </VBox>
 
             <Region HBox.hgrow="ALWAYS"/>
+
 
             <Button text="ROLL"
                     fx:id="rollButton"
                     onAction="#onRoll"
                     styleClass="roll-button"/>
+            <Label text="You rolled a:"/>
 
             <Region HBox.hgrow="ALWAYS"/>
 
 
             <VBox alignment="CENTER_RIGHT" spacing="5">
                 <Label text="Player 3"/>
+                <Label text="Points:0"/>
                 <Label text="Player 4"/>
+                <Label text="Points:0"/>
             </VBox>
 
         </HBox>
