--- a/src/main/resources/app.css
+++ b/src/main/resources/app.css
@@ -40,3 +40,11 @@ bottom-bar {
 .mapView {
     -fx-border-radius: 12;
 }
+.dialog-pane {
+    -fx-background-color: #2b2b2b;
+    -fx-border-radius: 12;
+}
+.dialog-pane.header-panel {
+    -fx-background-color: #2b2b2b;
+
+}
