--- a/src/main/resources/travelGame.fxml
+++ b/src/main/resources/travelGame.fxml
@@ -29,7 +29,7 @@
               styleClass="bottom-bar">
 
             <VBox alignment="CENTER_LEFT" spacing="5">
-                <Label text="Player 1"/>
+                <Label fx:id="playerLabel" text="Player 1"/>
                 <Label text="Credits:0"/>
                 <Label text="Player 2"/>
                 <Label text="Credits:0"/>
