--- a/src/main/resources/travelGame.fxml
+++ b/src/main/resources/travelGame.fxml
@@ -13,6 +13,7 @@
                        preserveRatio="true"
                        fitWidth="900"
                        fitHeight="700" />
+            <Pane fx:id="drawingPane" prefWidth="900" prefHeight="700" onMouseClicked="#onMapClicked" />
         </StackPane>
     </center>
 
