--- a/src/main/resources/travelGame.fxml
+++ b/src/main/resources/travelGame.fxml
@@ -22,11 +22,16 @@
 
     <right>
         <VBox spacing="10" prefWidth="320" style="-fx-padding: 30 20 20 20;">
+            <Label text="Possible moves"
+                   style="-fx-font-size: 18; -fx-font-weight: bold; -fx-text-fill: white;"/>
+            <VBox fx:id="movesBox" spacing="8"/>
+
             <Label text="Log"
                    style="-fx-font-size: 18; -fx-font-weight: bold; -fx-text-fill: white;"/>
             <ListView fx:id="logList" VBox.vgrow="ALWAYS"/>
         </VBox>
     </right>
+
 
     <bottom>
         <VBox spacing="10" style="-fx-padding: 12;" styleClass="bottom-bar">
