--- a/src/main/resources/travelGame.fxml
+++ b/src/main/resources/travelGame.fxml
@@ -77,6 +77,7 @@
                         <Label text="Destination:" style="-fx-text-fill: white; -fx-font-weight: bold;"/>
                         <Label fx:id="destinationLabel" text="-" style="-fx-text-fill: white;"/>
                     </HBox>
+                    <DialogPane fx:id="winConLabel" style="-fx-font-weight: bold;"/>
                 </VBox>
 
                 <Region HBox.hgrow="ALWAYS"/>
